--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -165,6 +165,7 @@ body {
 
 // Подключение стилей общих элементов проекта
 @import "common";
+@import "venobox";
 
 // Подключение стилей отдельных блоков
 @import "header";
