--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -107,7 +107,7 @@
       transition: $animation_speed;
 
       &:hover {
-        color: $accent;
+        color: #e76642;
       }
     }
   }
@@ -123,5 +123,24 @@
     font-weight: 300;
     text-transform: uppercase;
     margin-bottom: 40px;
+  }
+}
+
+
+.author {
+  padding: 30px 0px;
+  background-color: $mainColor;
+  border-top: 1px solid rgba($color: $white, $alpha: .2);
+
+  // .author__container
+
+  &__container {
+  }
+
+  // .author__inner
+  &__inner{
+    text-align: center;
+    color: $white;
+    font-size: 17px;
   }
 }
