--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -39,7 +39,7 @@
 
   &__undertitle {
     // margin-bottom: 20px;
-    color: #f0ece6;
+    color: $white;
     font-weight: 400;
     font-size: 30px;
     font-family: $secondaryFont;
@@ -76,25 +76,34 @@
     display: flex;
     align-items: center;
     justify-content:center;
-    background-color: $mainColor;
+    background-color: #e76642;
     border-radius: 8px;
-    font-family: $tildaSans;
+    font-family: $secondaryFont;
     font-size: 16px;
     font-weight: 600;
+    transition: $animation_speed;
 
     &:first-child{
-      background-color: #f8f5f0;
+      background-color: $white;
       width: 250px;
+
+      &:hover{
+        background-color: #2c4d68;
+        color: $white;
+      }
     }
 
     &:last-child{
       width: 250px;
       color: #f8f5f0;
+
+      &:hover{
+        background-color: #2c4d68;
+        color: $white;
+      }
     }
   }
 }
-
-
 
 .index-service {
   padding: 50px 0px 50px;
@@ -123,7 +132,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 1px solid rgba($color: $accent, $alpha: 1.0);
+      border: 1px solid rgba($color: $mainColor, $alpha: 1.0);
       border-radius: 50%;
 
       img{
@@ -161,7 +170,7 @@
   background-color: #fff;
   box-shadow: 0 0 4px 2px rgba(142,142,142,.05);
   border-radius: 20px;
-  height: 540px;
+  height: clamp(450px, 20vh, 540px);
 
   @media (hover:hover) {
     &:hover{
@@ -224,7 +233,7 @@
     overflow: hidden;
     border-radius: 50% 50% 0px 0px;
     position: relative;
-    height: 350px;
+    height: clamp(300px, 10vh, 350px);
     width: 100%;
     
     img{
@@ -285,16 +294,21 @@
     font-family: $secondaryFont;
     letter-spacing: .5px;
     font-size: 16px;
-    color: #51514f;
+    color: $mainColor;
     font-weight: 500;
     text-transform: uppercase;
+    transition: $animation_speed;
 
     &.active{
-      opacity: .7;
+      color: #e76642;
     }
 
     &:first-child{
       padding-left: 0px;
+    }
+
+    &:hover{
+      color: #e76642;
     }
   }
 
@@ -316,11 +330,20 @@
   // .tab__content-item
 
   &__content-item {
-    // box-shadow: 0 0 4px 2px rgba(142, 142, 142, 0.05);
+    padding: 10px;
+    border-radius: 8px;
+    transition: $animation_speed;
+
+    &:hover{
+      box-shadow: 0 0 4px 2px rgba($color: $mainColor, $alpha: .1);
+    }
   }
 
   // .tab__content-image
   &__content-image{
+    overflow: hidden;
+    border-radius: 8px;
+
     img{
       max-width: 100%;
     }
@@ -328,10 +351,12 @@
 
   // .tab__content-name
   &__content-name{
-    font-size: 18px;
+    font-size: 19px;
     font-family: $secondaryFont;
     padding: 10px 0px 10px;
     display: flex;
+    color: $mainColor;
+    font-weight: 600;
   }
 
   // .tab__content-price
@@ -355,8 +380,9 @@
     align-items: center;
     height: 35px;
     padding: 0px 15px;
-    color: #51514f;
-    border: 2px solid #51514f;
+    color: $mainColor;
+    border: 2px solid $mainColor;
+    border-radius: 5px;
     font-weight: 700;
     font-size: 13px;
     font-family: $secondaryFont;
@@ -423,7 +449,7 @@
 
   &__quote {
     width: 100px;
-    color: $mainColor;
+    color: #e76642;
     line-height: 100px;
     position: absolute;
     top: -43px;
@@ -626,7 +652,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($color: $mainColor, $alpha: 0.6);
+    background-color: rgba($color: $mainColor, $alpha: 0.8);
   }
 
   // .about__container
@@ -681,11 +707,14 @@
     color: $bodyColor;
     font-size: 16px;
     border-radius: 8px;
-    background-color: $accent;
+    background-color: #e76642;
+    font-family: $secondaryFont;
+    font-weight: 600;
     transition: $animation_speed;
 
     &:hover {
-      background-color: #74aa4b;
+      background-color: $white;
+      color: $mainColor;
     }
   }
 }
@@ -781,7 +810,7 @@
     transition: $animation_speed;
 
     &:hover {
-      background-color: #2c4d68;
+      background-color: #e76642;
       color: $white;
     }
   }
@@ -811,16 +840,24 @@
     background-color: $white;
     border-radius: 8px;
     margin-bottom: 30px;
+    padding: 10px 0px;
     box-shadow: 0 0 4px 2px rgba(142, 142, 142, .05);
 
     a{
       display: flex;
-      padding: 25px 15px;
+      padding: 15px 15px;
+      margin: 0px 5px;
       font-family: $secondaryFont;
       border-radius: 8px;
+      transition: $animation_speed;
 
       &.active{
-        background-color: $mainColor;
+        background-color: #e76642;
+        color: $white;
+      }
+
+      &:hover{
+        background-color: #e76642;
         color: $white;
       }
     }
@@ -938,11 +975,21 @@
   &__contact-items {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-    gap: 30px;
+    gap: 20px;
+    
 
     a,p{
+      width: auto;
+      display: inline;
+      padding: 10px 0px;
       font-family: $secondaryFont;
-      // font-weight: 600;
+      height: 100%;
+      cursor: pointer;
+      transition: $animation_speed;
+
+      &:hover{
+        color: #e76642;
+      }
     }
   }
 
@@ -978,11 +1025,17 @@
     button{
       font-family: $secondaryFont;
       padding: 10px 30px;
-      background-color: $white;
-      color: $mainColor;
+      background-color: #e76642;
+      color: $white;
       font-weight: 600;
       margin-top: 20px;
       border-radius: 8px;
+      transition: $animation_speed;
+
+      &:hover{
+        background-color: $white;
+        color: $mainColor;
+      }
     }
   }
 }
