--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -2452,20 +2452,11 @@ button.vbox-link-btn:hover {
 }
 
 .footer__logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  font-family: "Train One", cursive;
-  font-size: 25px;
-  font-weight: 300;
-  text-transform: uppercase;
   margin-bottom: 40px;
+}
+
+.footer__logo img {
+  width: 100px;
 }
 
 .author {
@@ -2478,6 +2469,12 @@ button.vbox-link-btn:hover {
   text-align: center;
   color: #ffffff;
   font-size: 17px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.author__inner:hover {
+  opacity: 0.8;
 }
 
 .no-webp .side-menu{
