develop single page

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,14 +1,13 @@
 .header {
+    box-shadow: 0px 0px 5px 0px rgba($color: $mainColor, $alpha: .1);
 
     // .header__top
 
-    &__top {
-    }
+    &__top {}
 
     // .header__bottom
 
-    &__bottom {
-    }
+    &__bottom {}
 }
 
 .top-header {
@@ -17,8 +16,7 @@
 
     // .top-header__container
 
-    &__container {
-    }
+    &__container {}
 
     // .top-header__inner
 
@@ -34,26 +32,25 @@
         font-size: 50px;
         margin-right: clamp(20px, 10vw, 290px);
 
-        img{
+        img {
             width: 70px;
         }
     }
 
     // .top-header__nav
 
-    &__nav {
-    }
+    &__nav {}
 
     // .top-header__actions
 
     &__actions {
 
-        a{
+        a {
             font-family: $secondaryFont;
             font-weight: 800;
         }
 
-        button{
+        button {
             background-color: #e76642;
             color: $white;
             font-family: $secondaryFont;
@@ -62,17 +59,17 @@
             margin-left: clamp(20px, 10vw, 150px);
             transition: $animation_speed;
 
-            &:hover{
+            &:hover {
                 background-color: #2c4d68;
             }
         }
     }
 
     // .top-header__phone
-    &__phone{
+    &__phone {
         transition: $animation_speed;
 
-        &:hover{
+        &:hover {
             color: #e76642;
         }
     }
@@ -90,8 +87,7 @@
 
     // .nav__item
 
-    &__item {
-    }
+    &__item {}
 
     // .nav__link
 
@@ -105,13 +101,13 @@
         transition: $animation_speed;
 
 
-        &.active{
+        &.active {
             color: $white;
             background-color: $mainColor;
             border-radius: 8px;
         }
 
-        &:hover{
+        &:hover {
             // color: #25547a;
             color: $white;
             background-color: $mainColor;
@@ -123,8 +119,7 @@
 
     // .bottom-header__container
 
-    &__container {
-    }
+    &__container {}
 
     // .bottom-header__days
 
@@ -144,12 +139,12 @@
         border-bottom: 3px solid rgba($color: #e76642, $alpha: 0);
         transition: $animation_speed;
 
-        &.active{
-            border-color: rgba($color: #e76642, $alpha: 1.0);   
+        &.active {
+            border-color: rgba($color: #e76642, $alpha: 1.0);
         }
 
-        &:hover{
-            border-color: rgba($color: #e76642, $alpha: 1.0);   
+        &:hover {
+            border-color: rgba($color: #e76642, $alpha: 1.0);
         }
     }
 
@@ -163,9 +158,8 @@
 
     &__day--number {
         font-size: 14px;
-       font-family: $secondaryFont; 
-       font-weight: 600;
-       color: rgba($color: $mainColor, $alpha: .7);
+        font-family: $secondaryFont;
+        font-weight: 600;
+        color: rgba($color: $mainColor, $alpha: .7);
     }
 }
-
