--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -8,7 +8,7 @@
   border-radius: 0px 0px 50px 50px;
   padding: clamp(30px, 10vw, 120px);
 
-  &::before{
+  &::before {
     content: '';
     position: absolute;
     top: 0;
@@ -20,8 +20,7 @@
 
   // .index-banner__container
 
-  &__container {
-  }
+  &__container {}
 
   // .index-banner__content
 
@@ -75,7 +74,7 @@
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content:center;
+    justify-content: center;
     background-color: #e76642;
     border-radius: 8px;
     font-family: $secondaryFont;
@@ -83,21 +82,21 @@
     font-weight: 600;
     transition: $animation_speed;
 
-    &:first-child{
+    &:first-child {
       background-color: $white;
       width: 250px;
 
-      &:hover{
+      &:hover {
         background-color: #2c4d68;
         color: $white;
       }
     }
 
-    &:last-child{
+    &:last-child {
       width: 250px;
       color: #f8f5f0;
 
-      &:hover{
+      &:hover {
         background-color: #2c4d68;
         color: $white;
       }
@@ -110,7 +109,7 @@
   position: relative;
 
   // .index-banner__union
-  &__union{
+  &__union {
     display: flex;
     // align-items: center;
     justify-content: center;
@@ -125,7 +124,7 @@
     transform: translateX(-50%);
     z-index: 2;
 
-    span{
+    span {
       margin-top: 10px;
       width: 60px;
       height: 60px;
@@ -135,7 +134,7 @@
       border: 1px solid rgba($color: $mainColor, $alpha: 1.0);
       border-radius: 50%;
 
-      img{
+      img {
         width: 20px;
       }
     }
@@ -159,8 +158,7 @@
 
   // .index-service__item
 
-  &__item {
-  }
+  &__item {}
 }
 
 .item-service {
@@ -168,24 +166,24 @@
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  box-shadow: 0 0 4px 2px rgba(142,142,142,.05);
+  box-shadow: 0 0 4px 2px rgba($color: $mainColor, $alpha: .05);
   border-radius: 20px;
   height: clamp(450px, 20vh, 540px);
 
   @media (hover:hover) {
-    &:hover{
-      .item-service__image{
-        img{
+    &:hover {
+      .item-service__image {
+        img {
           transform: scale(1.05);
         }
       }
 
-      .item-service__icon{
+      .item-service__icon {
         transform: translateX(10px);
       }
     }
   }
-  
+
 
   // .item-service__top
 
@@ -200,7 +198,6 @@
   &__title {
     font-size: 23px;
     font-weight: 500;
-    // line-height: 0%;
     margin-bottom: 20px;
     font-family: $fontFamily;
   }
@@ -210,7 +207,9 @@
   &__icon {
     transition: $animation_speed;
 
-    svg,img,i{
+    svg,
+    img,
+    i {
       width: 20px;
       height: 20px;
     }
@@ -222,8 +221,8 @@
     margin-bottom: 30px;
     padding: 0px 30px 0px;
     flex: 1 1 auto;
-    // font-size: 18px;
-    font-family: $secondaryFont;
+    font-style: italic;
+    font-size: 14px;
     line-height: 150%;
   }
 
@@ -235,8 +234,8 @@
     position: relative;
     height: clamp(300px, 10vh, 350px);
     width: 100%;
-    
-    img{
+
+    img {
       width: 100%;
       height: 100%;
       transition: $animation_speed;
@@ -253,8 +252,7 @@
 
   // .index-catalog__container
 
-  &__container {
-  }
+  &__container {}
 
   // .index-catalog__title
 
@@ -266,8 +264,7 @@
 
   // .index-catalog__tab
 
-  &__tab {
-  }
+  &__tab {}
 }
 
 .tab {
@@ -299,24 +296,22 @@
     text-transform: uppercase;
     transition: $animation_speed;
 
-    &.active{
+    &.active {
       color: #e76642;
     }
 
-    &:first-child{
+    &:first-child {
       padding-left: 0px;
     }
 
-    &:hover{
+    &:hover {
       color: #e76642;
     }
   }
 
   // .tab__content
 
-  &__content {
-    
-  }
+  &__content {}
 
   // .tab__content-grid
 
@@ -324,68 +319,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     gap: 40px;
-   
-  }
 
-  // .tab__content-item
-
-  &__content-item {
-    padding: 10px;
-    border-radius: 8px;
-    transition: $animation_speed;
-
-    &:hover{
-      box-shadow: 0 0 4px 2px rgba($color: $mainColor, $alpha: .1);
-    }
-  }
-
-  // .tab__content-image
-  &__content-image{
-    overflow: hidden;
-    border-radius: 8px;
-
-    img{
-      max-width: 100%;
-    }
-  }
-
-  // .tab__content-name
-  &__content-name{
-    font-size: 19px;
-    font-family: $secondaryFont;
-    padding: 10px 0px 10px;
-    display: flex;
-    color: $mainColor;
-    font-weight: 600;
-  }
-
-  // .tab__content-price
-  &__content-price{
-    font-size: 17px;
-    font-weight: 400;
-    font-family: $secondaryFont;
-    padding: 0px 0px 20px;
-  }
-
-  // .tab__content-btns
-  &__content-btns{
-    display: flex;
-    align-items: center;
-    gap: 20px;
-  }
-
-  // .tab__content-btn
-  &__content-btn{
-    display: flex;
-    align-items: center;
-    height: 35px;
-    padding: 0px 15px;
-    color: $mainColor;
-    border: 2px solid $mainColor;
-    border-radius: 5px;
-    font-weight: 700;
-    font-size: 13px;
-    font-family: $secondaryFont;
   }
 }
 
@@ -395,28 +329,23 @@
 
   // .reviews__container
 
-  &__container {
-  }
+  &__container {}
 
   // .reviews__inner
 
-  &__inner {
-  }
+  &__inner {}
 
   // .reviews__block-top
 
-  &__block-top {
-  }
+  &__block-top {}
 
   // .reviews__title
 
-  &__title {
-  }
+  &__title {}
 
   // .reviews__slider
 
-  &__slider {
-  }
+  &__slider {}
 
   // .reviews__wrapper
 
@@ -439,6 +368,7 @@
 
   .swiper-slide-active {
     box-shadow: 0px 0px 10px rgba($color: $mainColor, $alpha: 0.05);
+
     .reviews__quote {
       top: 0;
       opacity: 1;
@@ -494,6 +424,7 @@
   &__name {
     font-size: 16px;
     text-align: right;
+
     p {
       font-weight: 600;
       margin-bottom: 5px;
@@ -560,7 +491,7 @@
       transition: $animation_speed;
 
       &:hover {
-       background-color: #2c4d68;
+        background-color: #2c4d68;
       }
     }
 
@@ -606,8 +537,7 @@
 
     // .reviews__contarols-next
 
-    &-next {
-    }
+    &-next {}
 
     .swiper-button-prev,
     .swiper-button-next {
@@ -631,6 +561,7 @@
       height: 10px;
       transition: $animation_speed;
     }
+
     .swiper-pagination-bullet-active {
       width: 40px;
       border-radius: 5px;
@@ -828,8 +759,7 @@
 
   // .index-gallery__title
 
-  &__title {
-  }
+  &__title {}
 
   // .index-gallery__header
 
@@ -843,7 +773,7 @@
     padding: 10px 0px;
     box-shadow: 0 0 4px 2px rgba(142, 142, 142, .05);
 
-    a{
+    a {
       display: flex;
       padding: 15px 15px;
       margin: 0px 5px;
@@ -851,12 +781,12 @@
       border-radius: 8px;
       transition: $animation_speed;
 
-      &.active{
+      &.active {
         background-color: #e76642;
         color: $white;
       }
 
-      &:hover{
+      &:hover {
         background-color: #e76642;
         color: $white;
       }
@@ -867,7 +797,7 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(290px,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     gap: 20px;
     background-color: $white;
     padding: 10px;
@@ -882,23 +812,23 @@
     border-radius: 8px;
     position: relative;
 
-    &:hover{
-      &::before{
+    &:hover {
+      &::before {
         pointer-events: all;
         opacity: 1;
       }
 
-      i{
+      i {
         transform: translate(-50%, -50%) scale(1);
       }
     }
 
-    img{
+    img {
       max-width: 100%;
       height: 100%;
     }
 
-    &::before{
+    &::before {
       content: "";
       width: 100%;
       height: 100%;
@@ -911,7 +841,7 @@
       transition: $animation_speed;
     }
 
-    i{
+    i {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -932,15 +862,14 @@
 
   // .map__container
 
-  &__container {
-  }
+  &__container {}
 
   // .map__inner
 
   &__inner {
     height: 500px;
     padding: 30px;
-    
+
   }
 
   // .map__content
@@ -976,9 +905,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
     gap: 20px;
-    
 
-    a,p{
+
+    a,
+    p {
       width: auto;
       display: inline;
       padding: 10px 0px;
@@ -987,7 +917,7 @@
       cursor: pointer;
       transition: $animation_speed;
 
-      &:hover{
+      &:hover {
         color: #e76642;
       }
     }
@@ -1013,7 +943,7 @@
   // .map__callback-avatar
 
   &__callback-avatar {
-    img{
+    img {
       width: 100%;
     }
   }
@@ -1022,7 +952,7 @@
 
   &__callback-action {
 
-    button{
+    button {
       font-family: $secondaryFont;
       padding: 10px 30px;
       background-color: #e76642;
@@ -1032,11 +962,10 @@
       border-radius: 8px;
       transition: $animation_speed;
 
-      &:hover{
+      &:hover {
         background-color: $white;
         color: $mainColor;
       }
     }
   }
 }
-
