--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -12,6 +12,7 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
 @import url(https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&family=Ruslan+Display&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Nunito:200,300,regular,500,600,700,800,900,200italic,300italic,italic,500italic,600italic,700italic,800italic,900italic);
+@import url(https://fonts.googleapis.com/css2?family=Victor+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap);
 @charset "UTF-8";
 @font-face {
   font-family: "Monologue";
@@ -115,7 +116,7 @@ body {
 body {
   color: #253746;
   line-height: 1;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
   font-size: 1rem;
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
@@ -128,7 +129,6 @@ body {
 input,
 button,
 textarea {
-  font-family: "Playfair Display";
   font-size: inherit;
 }
 
@@ -455,7 +455,187 @@ main {
   position: relative;
 }
 
-.title {
+section {
+  padding: clamp(30px, 3vw, 50px) 0px;
+}
+
+.form-controls {
+  background-color: transparent;
+  padding: 0px 20px;
+  width: 100%;
+  height: 50px;
+  font-size: 14px;
+}
+
+.form-controls:focus {
+  border-color: #253746;
+  outline: none;
+}
+
+.card-product {
+  padding: 10px;
+  border-radius: 8px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: 1px solid rgba(37, 55, 70, 0.1);
+}
+
+.card-product:hover {
+  -webkit-box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.1);
+          box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.1);
+}
+
+.card-product__image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+  border-radius: 8px;
+  position: relative;
+  width: 100%;
+  min-height: 300px;
+}
+
+.card-product__image img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-product__name {
+  font-size: 19px;
+  font-family: "Nunito";
+  padding: 10px 0px 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #253746;
+  font-weight: 600;
+}
+
+.card-product__price {
+  font-size: 17px;
+  font-weight: 400;
+  font-family: "Nunito";
+  padding: 0px 0px 20px;
+}
+
+.card-product__btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+
+.card-product__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 35px;
+  padding: 0px 15px;
+  color: #253746;
+  border: 2px solid #253746;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 13px;
+  font-family: "Nunito";
+}
+
+.search {
+  position: absolute;
+  top: 0%;
+  background-color: white;
+  border-radius: 8px;
+  left: 0;
+  width: 0%;
+  z-index: 10;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  overflow: hidden;
+  pointer-events: none;
+}
+
+.search._active {
+  width: 100%;
+  pointer-events: all;
+}
+
+.search form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.search form input {
+  font-size: 18px;
+  border-bottom: 1px solid rgba(37, 55, 70, 0.3);
+}
+
+.search form button {
+  width: 150px;
+  background-color: #e76642;
+  color: #ffffff;
+  border-radius: 0px 8px 8px 0px;
+}
+
+.filter-sort {
+  position: absolute;
+  top: 180%;
+  margin-top: 10px;
+  right: 0;
+  width: 290px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  z-index: 19;
+}
+
+.filter-sort._active {
+  top: 100%;
+  pointer-events: all;
+  opacity: 1;
+}
+
+.filter-sort__value {
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.filter-sort__value:hover {
+  color: #e76642;
+}
+
+.filter-sort__value._active {
+  background-color: #e76642;
+  color: white;
+}
+
+.title-page__title {
+  font-size: clamp(35px, 5.5vw, 80px);
+  font-weight: 600;
+  line-height: 120%;
+  text-align: center;
+  margin-top: 50px;
+}
+
+._title {
   font-size: clamp(25px, 3vw, 45px);
   font-weight: 300;
   margin-bottom: 40px;
@@ -469,10 +649,10 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
 }
 
-.title::before {
+._title::before {
   content: "";
   background-image: url(../img/icon/i-decor-title-left.svg);
   background-size: contain;
@@ -483,7 +663,7 @@ main {
   margin-right: 20px;
 }
 
-.title::after {
+._title::after {
   content: "";
   background-image: url(../img/icon/i-decor-title-right.svg);
   background-size: contain;
@@ -508,7 +688,7 @@ main {
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
 }
 
 .title--dark::before {
@@ -2189,6 +2369,11 @@ button.vbox-link-btn:hover {
   }
 }
 
+.header {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(37, 55, 70, 0.1);
+          box-shadow: 0px 0px 5px 0px rgba(37, 55, 70, 0.1);
+}
+
 .top-header {
   border-bottom: 1px solid rgba(37, 55, 70, 0.2);
   padding: 10px 0px;
@@ -2393,7 +2578,7 @@ button.vbox-link-btn:hover {
   color: #f3f3f3;
   margin-bottom: 10px;
   font-weight: 400;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
 }
 
 .footer__social {
@@ -2801,6 +2986,39 @@ button.vbox-link-btn:hover {
   background-color: #74aa4b;
 }
 
+.breadcrumbs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.breadcrumbs__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.breadcrumbs__item:not(:last-child)::after {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 1px;
+  margin: 0px 10px;
+  background-color: #253746;
+}
+
+.breadcrumbs__item:last-child {
+  opacity: 0.8;
+}
+
 .index-banner {
   background-repeat: no-repeat;
   background-position: center;
@@ -2854,7 +3072,7 @@ button.vbox-link-btn:hover {
   text-align: center;
   letter-spacing: 3px;
   font-weight: 900;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
   line-height: 120%;
 }
 
@@ -2982,8 +3200,8 @@ button.vbox-link-btn:hover {
       -ms-flex-direction: column;
           flex-direction: column;
   background-color: #fff;
-  -webkit-box-shadow: 0 0 4px 2px rgba(142, 142, 142, 0.05);
-          box-shadow: 0 0 4px 2px rgba(142, 142, 142, 0.05);
+  -webkit-box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
+          box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
   border-radius: 20px;
   height: clamp(450px, 20vh, 540px);
 }
@@ -3002,7 +3220,7 @@ button.vbox-link-btn:hover {
   font-size: 23px;
   font-weight: 500;
   margin-bottom: 20px;
-  font-family: "Ruslan Display", sans-serif;
+  font-family: "Victor Mono", monospace;
 }
 
 .item-service__icon {
@@ -3023,7 +3241,8 @@ button.vbox-link-btn:hover {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
-  font-family: "Nunito";
+  font-style: italic;
+  font-size: 14px;
   line-height: 150%;
 }
 
@@ -3103,72 +3322,6 @@ button.vbox-link-btn:hover {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
   gap: 40px;
-}
-
-.tab__content-item {
-  padding: 10px;
-  border-radius: 8px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.tab__content-item:hover {
-  -webkit-box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.1);
-          box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.1);
-}
-
-.tab__content-image {
-  overflow: hidden;
-  border-radius: 8px;
-}
-
-.tab__content-image img {
-  max-width: 100%;
-}
-
-.tab__content-name {
-  font-size: 19px;
-  font-family: "Nunito";
-  padding: 10px 0px 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #253746;
-  font-weight: 600;
-}
-
-.tab__content-price {
-  font-size: 17px;
-  font-weight: 400;
-  font-family: "Nunito";
-  padding: 0px 0px 20px;
-}
-
-.tab__content-btns {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 20px;
-}
-
-.tab__content-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 35px;
-  padding: 0px 15px;
-  color: #253746;
-  border: 2px solid #253746;
-  border-radius: 5px;
-  font-weight: 700;
-  font-size: 13px;
-  font-family: "Nunito";
 }
 
 .reviews {
@@ -3965,6 +4118,221 @@ Select c dropdown на JS
 
 .dropdown__input-hidden {
   display: none;
+}
+
+.pagging {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.pagging__arrow {
+  font-size: 25px;
+  opacity: 0.7;
+}
+
+.pagging__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+}
+
+.pagging__list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50px;
+  height: 50px;
+  border: 1px solid rgba(37, 55, 70, 0.1);
+  border-radius: 4px;
+}
+
+.pagging__item._active {
+  background-color: #e76642;
+  color: #ffffff;
+}
+
+.single-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+}
+
+.products-single {
+  width: 100%;
+}
+
+.products-single__grid {
+  display: -ms-grid;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  gap: 40px;
+}
+
+.aside {
+  min-width: 290px;
+  height: 100%;
+  overflow-y: auto;
+  padding: 30px 20px;
+  position: sticky;
+  top: 20px;
+  -webkit-box-shadow: 0px 0px 10px rgba(37, 55, 70, 0.1);
+          box-shadow: 0px 0px 10px rgba(37, 55, 70, 0.1);
+  border: 1px solid rgba(37, 55, 70, 0.1);
+  border-radius: 8px;
+}
+
+.aside::-webkit-scrollbar {
+  width: 6px;
+  /* ширина всей полосы прокрутки */
+}
+
+.aside::-webkit-scrollbar-track {
+  background: rgba(37, 55, 70, 0.03);
+  border-radius: 2px;
+  /* цвет зоны отслеживания */
+}
+
+.aside::-webkit-scrollbar-thumb {
+  background-color: #e76642;
+  border-radius: 2px;
+  /* цвет бегунка */
+}
+
+.aside__title {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 140%;
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid rgba(37, 55, 70, 0.2);
+}
+
+.aside__filter {
+  max-height: 600px;
+}
+
+.aside__item {
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.aside__item._active {
+  background-color: #e76642;
+  color: #ffffff;
+}
+
+.day-single__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  position: relative;
+}
+
+.day-single__days {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
+          box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
+  border: 1px solid rgba(37, 55, 70, 0.1);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-radius: 8px;
+  position: relative;
+}
+
+.day-single__day {
+  width: 200px;
+  height: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 8px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.day-single__day._active {
+  background-color: #e76642;
+  color: #ffffff;
+  font-weight: 600;
+}
+
+.day-single__btn {
+  position: relative;
+  -webkit-box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
+          box-shadow: 0 0 4px 2px rgba(37, 55, 70, 0.05);
+  border: 1px solid rgba(37, 55, 70, 0.1);
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.day-single__btn i {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  -webkit-transition-delay: 0.3s;
+          transition-delay: 0.3s;
+}
+
+.day-single__btn._active {
+  color: #e76642;
+}
+
+.products__title {
+  font-size: clamp(35px, 5.5vw, 80px);
+  font-weight: 600;
+  line-height: 120%;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .swiper {
@@ -4837,6 +5205,18 @@ button.swiper-pagination-bullet {
     -webkit-transform: translateX(10px);
         -ms-transform: translateX(10px);
             transform: translateX(10px);
+  }
+
+  .aside__item:hover {
+    color: #e76642;
+  }
+
+  .day-single__day:hover {
+    color: #e76642;
+  }
+
+  .day-single__btn:hover {
+    color: #e76642;
   }
 }
 
