--- a/src/scss/base/null.scss
+++ b/src/scss/base/null.scss
@@ -43,7 +43,6 @@ body {
 input,
 button,
 textarea {
-  font-family: $playForDisplay;
   font-size: inherit;
 }
 
@@ -88,7 +87,8 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   /* display: none; <- Crashes Chrome on hover */
   -webkit-appearance: none;
-  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+  margin: 0;
+  /* <-- Apparently some margin are still there even though it's hidden */
 }
 
 html {
