--- a/src/scss/base/pagging.scss
+++ b/src/scss/base/pagging.scss
@@ -2,18 +2,40 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	gap: 20px;
+	margin-top: 30px;
+
 	// .pagging__arrow
 	&__arrow {
+		font-size: 25px;
+		opacity: .7;
 	}
+
 	// .pagging__list
 	&__list {
 		display: flex;
+		align-items: center;
+		justify-content: center;
+		gap: 20px;
+
 		li {
+			a {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				width: 50px;
+				height: 50px;
+				border: 1px solid rgba($color: $mainColor, $alpha: .1);
+				border-radius: 4px;
+			}
 		}
 	}
+
 	// .pagging__item
 	&__item {
 		&._active {
+			background-color: $orange;
+			color: $white;
 		}
 	}
 }
