--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,11 +3,187 @@ main {
   // margin-left: 100px;
 }
 
-.btn {
+.btn {}
+
+section {
+  padding: clamp(30px, 3vw, 50px) 0px;
+}
+
+.form-controls {
+  background-color: transparent;
+  padding: 0px 20px;
+  width: 100%;
+  height: 50px;
+  font-size: 14px;
+
+  &:focus {
+    border-color: rgba($color: $mainColor, $alpha: 1);
+    outline: none;
+  }
+}
+
+.card-product {
+  padding: 10px;
+  border-radius: 8px;
+  transition: $animation_speed;
+  border: 1px solid rgba($color: $mainColor, $alpha: .1);
+
+  &:hover {
+    box-shadow: 0 0 4px 2px rgba($color: $mainColor, $alpha: .1);
+  }
+
+  // .card-product__image
+
+  &__image {
+    display: flex;
+    overflow: hidden;
+    border-radius: 8px;
+    position: relative;
+    width: 100%;
+    min-height: 300px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+  }
+
+  // .card-product__name
+
+  &__name {
+    font-size: 19px;
+    font-family: $secondaryFont;
+    padding: 10px 0px 10px;
+    display: flex;
+    color: $mainColor;
+    font-weight: 600;
+  }
+
+  // .card-product__price
+
+  &__price {
+    font-size: 17px;
+    font-weight: 400;
+    font-family: $secondaryFont;
+    padding: 0px 0px 20px;
+  }
+
+  // .card-product__btns
+
+  &__btns {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+  }
+
+  // .card-product__btn
+
+  &__btn {
+    display: flex;
+    align-items: center;
+    height: 35px;
+    padding: 0px 15px;
+    color: $mainColor;
+    border: 2px solid $mainColor;
+    border-radius: 5px;
+    font-weight: 700;
+    font-size: 13px;
+    font-family: $secondaryFont;
+  }
+}
+
+.search {
+  position: absolute;
+  top: 0%;
+  background-color: rgba($color: $white, $alpha: 1.0);
+  border-radius: 8px;
+  left: 0;
+  width: 0%;
+  z-index: 10;
+  transition: $animation_speed;
+  overflow: hidden;
+  pointer-events: none;
+
+
+  &._active {
+    width: 100%;
+    pointer-events: all;
+  }
+
+  form {
+    display: flex;
+
+    input {
+      font-size: 18px;
+      border-bottom: 1px solid rgba($color: $mainColor, $alpha: .3);
+    }
+
+    button {
+      width: 150px;
+      background-color: $orange;
+      color: $white;
+      border-radius: 0px 8px 8px 0px;
+    }
+  }
+}
+
+.filter-sort {
+  position: absolute;
+  top: 180%;
+  margin-top: 10px;
+  right: 0;
+  width: 290px;
+  background-color: rgba($color: $white, $alpha: 1.0);
+  padding: 20px;
+  border-radius: 8px;
+  opacity: 0;
+  pointer-events: none;
+  transition: $animation_speed;
+  z-index: 19;
+
+  &._active {
+    top: 100%;
+    pointer-events: all;
+    opacity: 1;
+  }
+
+  // .filter-sort__value
+  &__value {
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: $animation_speed;
+
+    &:hover {
+      color: rgba($color: $orange, $alpha: 1.0);
+    }
+
+    &._active {
+      background-color: rgba($color: $orange, $alpha: 1.0);
+      color: rgba($color: $white, $alpha: 1.0);
+    }
+  }
 }
 
 
-.title {
+
+.title-page {
+
+  // .title-page__title
+  &__title {
+    font-size: clamp(35px, 5.5vw, 80px);
+    font-weight: 600;
+    line-height: 120%;
+    text-align: center;
+    margin-top: 50px;
+  }
+}
+
+._title {
   font-size: clamp(25px, 3vw, 45px);
   font-weight: 300;
   margin-bottom: 40px;
@@ -16,8 +192,8 @@ main {
   justify-content: center;
   position: relative;
   font-family: $fontFamily;
-  
-  &::before{
+
+  &::before {
     content: '';
     background-image: url(../img/icon/i-decor-title-left.svg);
     background-size: contain;
@@ -28,7 +204,7 @@ main {
     margin-right: 20px;
   }
 
-  &::after{
+  &::after {
     content: '';
     background-image: url(../img/icon/i-decor-title-right.svg);
     background-size: contain;
@@ -40,7 +216,7 @@ main {
   }
 }
 
-.title--dark{
+.title--dark {
   font-size: clamp(25px, 3vw, 45px);
   font-weight: 300;
   margin-bottom: 40px;
@@ -49,8 +225,8 @@ main {
   justify-content: center;
   position: relative;
   font-family: $fontFamily;
-  
-  &::before{
+
+  &::before {
     content: '';
     background-image: url(../img/icon/i-decor-title-left-darkblue.svg);
     background-size: contain;
@@ -61,7 +237,7 @@ main {
     margin-right: 20px;
   }
 
-  &::after{
+  &::after {
     content: '';
     background-image: url(../img/icon/i-decor-title-right-darkblue.svg);
     background-size: contain;
@@ -87,6 +263,7 @@ main {
   cursor: pointer;
   z-index: 1;
 }
+
 .anchor-scroll-hint {
   transform: scale(0.8);
   top: -5px;
@@ -159,9 +336,11 @@ main {
   0% {
     transform: translateY(0) translateX(-50%);
   }
+
   50% {
     transform: translateY(16px) translateX(-50%);
   }
+
   100% {
     transform: translateY(0) translateX(-50%);
   }
