--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -627,6 +627,86 @@ section {
   color: white;
 }
 
+.price-input__fields {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: 1px solid rgba(37, 55, 70, 0.1);
+  border-radius: 4px;
+  overflow: hidden;
+}
+
+.price-input__field input[type=number] {
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  border: 1px solid rgba(37, 55, 70, 0);
+  color: #253746;
+  background-color: transparent;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.price-input__field input[type=number]:focus {
+  outline: none;
+}
+
+.price-input .separator {
+  display: block;
+  width: 1px;
+  height: 40px;
+  margin: 0px 1px;
+  background-color: rgba(37, 55, 70, 0.1);
+}
+
+.price-input__slider {
+  margin-top: 20px;
+  height: 5px;
+  border-radius: 5px;
+  position: relative;
+  background-color: rgba(37, 55, 70, 0.1);
+}
+
+.price-input__progress {
+  height: 5px;
+  position: absolute;
+  left: 25%;
+  right: 25%;
+  border-radius: 5px;
+  background-color: #e76642;
+}
+
+.price-input__range {
+  position: relative;
+}
+
+.price-input__range input {
+  position: absolute;
+  top: -5px;
+  height: 5px;
+  width: 100%;
+  background: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  pointer-events: none;
+}
+
+.price-input__range input::-webkit-slider-thumb {
+  height: 17px;
+  width: 17px;
+  border-radius: 50%;
+  pointer-events: auto;
+  -webkit-appearance: none;
+          appearance: none;
+  border: none;
+  background-color: #e76642;
+}
+
 .title-page__title {
   font-size: clamp(35px, 5.5vw, 80px);
   font-weight: 600;
@@ -4219,6 +4299,10 @@ Select c dropdown на JS
   background-color: #e76642;
   border-radius: 2px;
   /* цвет бегунка */
+}
+
+.aside__options:not(:last-child) {
+  margin-bottom: 20px;
 }
 
 .aside__title {
