--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -286,6 +286,8 @@ section {
   line-height: 110%;
   font-weight: 600;
   font-size: clamp(35px, 2.5vw, 45px);
+  position: relative;
+  z-index: 2;
 
   // &::before {
   //   content: '';
@@ -339,3 +341,40 @@ section {
 }
 
 .text {}
+
+.single-banner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  overflow: hidden;
+  position: relative;
+  border-radius: 0px 0px 20% 20%;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba($color: $mainColor, $alpha: .5);
+    z-index: 0;
+  }
+
+  ._title {
+    color: $white;
+  }
+
+  .breadcrumbs {
+    color: $white;
+  }
+
+  .breadcrumbs__item::after {
+    background-color: $white !important;
+  }
+}
