--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -128,6 +128,10 @@ body {
 
     @if ($containerPadding>0) {
       padding: 0 rem(math.div($containerPadding, 2));
+
+      // @media screen and (min-width: 992px) {
+      //   padding: 0 70px;
+      // }
     }
   }
 }
@@ -189,3 +193,4 @@ body {
 @import "base/pagging";
 @import "pages/single";
 @import "pages/products";
+@import "pages/stock";
