--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -103,8 +103,7 @@ body::after {
 
   // .popup__info
 
-  .popup__info {
-  }
+  .popup__info {}
 
   // .popup__title
 
@@ -116,8 +115,7 @@ body::after {
 
   // .popup__price
 
-  .popup__price {
-  }
+  .popup__price {}
 
   // .popup__descr
 
@@ -131,6 +129,7 @@ body::after {
     margin-bottom: 30px;
     margin-top: 10px;
   }
+
   .popup__btn {
     margin-top: 30px;
     height: 50px;
@@ -146,5 +145,21 @@ body::after {
     &:hover {
       background-color: #74aa4b;
     }
+  }
+}
+
+.popup-view {
+  .card-product__descr {
+    display: block;
+  }
+
+  .card-product__image img {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card-product__image {
+    min-height: 100%;
   }
 }
